// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Launch when a launch is failed renders failed 1`] = `
<DocumentFragment>
  <div
    class="Launch-launch-116 launch"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation1 LaunchStatus-status-119 LaunchStatus-fail-123 MuiPaper-rounded"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root LaunchStatus-statusIcon-120"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM8 17.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5zM9.5 8c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5S9.5 9.38 9.5 8zm6.5 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
        />
      </svg>
    </div>
    <div
      class="Launch-connector-118 connector"
    />
    <div
      class="MuiPaper-root MuiPaper-elevation1 MuiCard-root Launch-launchInfo-117 launchInfo MuiPaper-rounded"
    >
      <div
        class="MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content"
        >
          <span
            class="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock"
          >
            Test
          </span>
          <span
            class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
          >
            <span>
              Tue, 01 Jan 2019 00:00:00 GMT
            </span>
          </span>
        </div>
      </div>
      <div
        class="MuiCardContent-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom"
        >
          Details
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
        >
          ID: id1
        </p>
      </div>
      <div
        class="MuiCardActions-root MuiCardActions-spacing"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall"
          href="/launches/1"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label"
          >
            explore
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Launch when a launch is successful renders successful 1`] = `
<DocumentFragment>
  <div
    class="Launch-launch-1 launch"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation1 LaunchStatus-status-4 LaunchStatus-success-7 MuiPaper-rounded"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root LaunchStatus-statusIcon-5"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM8 17.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5zM9.5 8c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5S9.5 9.38 9.5 8zm6.5 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
        />
      </svg>
    </div>
    <div
      class="Launch-connector-3 connector"
    />
    <div
      class="MuiPaper-root MuiPaper-elevation1 MuiCard-root Launch-launchInfo-2 launchInfo MuiPaper-rounded"
    >
      <div
        class="MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content"
        >
          <span
            class="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock"
          >
            Test
          </span>
          <span
            class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
          >
            <span>
              Tue, 01 Jan 2019 00:00:00 GMT
            </span>
          </span>
        </div>
      </div>
      <div
        class="MuiCardContent-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom"
        >
          Details
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
        >
          ID: id1
        </p>
      </div>
      <div
        class="MuiCardActions-root MuiCardActions-spacing"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall"
          href="/launches/1"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label"
          >
            explore
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Launch when a launch is upcoming renders upcoming 1`] = `
<DocumentFragment>
  <div
    class="Launch-launch-231 launch"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation1 LaunchStatus-status-234 LaunchStatus-upcoming-236 MuiPaper-rounded"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root LaunchStatus-statusIcon-235"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM8 17.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5zM9.5 8c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5S9.5 9.38 9.5 8zm6.5 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
        />
      </svg>
    </div>
    <div
      class="Launch-connector-233 connector"
    />
    <div
      class="MuiPaper-root MuiPaper-elevation1 MuiCard-root Launch-launchInfo-232 launchInfo MuiPaper-rounded"
    >
      <div
        class="MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content"
        >
          <span
            class="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock"
          >
            Test
          </span>
          <span
            class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
          >
            <span>
              Tue, 01 Jan 2019 00:00:00 GMT
            </span>
          </span>
        </div>
      </div>
      <div
        class="MuiCardContent-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom"
        >
          Details
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
        >
          ID: id1
        </p>
      </div>
      <div
        class="MuiCardActions-root MuiCardActions-spacing"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall"
          href="/launches/1"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label"
          >
            explore
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Launch when launch does not have details does not render the details section 1`] = `
<DocumentFragment>
  <div
    class="Launch-launch-461 launch"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation1 LaunchStatus-status-464 LaunchStatus-success-467 MuiPaper-rounded"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root LaunchStatus-statusIcon-465"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM8 17.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5zM9.5 8c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5S9.5 9.38 9.5 8zm6.5 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
        />
      </svg>
    </div>
    <div
      class="Launch-connector-463 connector"
    />
    <div
      class="MuiPaper-root MuiPaper-elevation1 MuiCard-root Launch-launchInfo-462 launchInfo MuiPaper-rounded"
    >
      <div
        class="MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content"
        >
          <span
            class="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock"
          >
            Test
          </span>
          <span
            class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
          >
            <span>
              Tue, 01 Jan 2019 00:00:00 GMT
            </span>
          </span>
        </div>
      </div>
      <div
        class="MuiCardContent-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
        >
          ID: id1
        </p>
      </div>
      <div
        class="MuiCardActions-root MuiCardActions-spacing"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall"
          href="/launches/1"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label"
          >
            explore
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Launch when launch does not have mission ids does not render the mission ids info 1`] = `
<DocumentFragment>
  <div
    class="Launch-launch-576 launch"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation1 LaunchStatus-status-579 LaunchStatus-success-582 MuiPaper-rounded"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root LaunchStatus-statusIcon-580"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM8 17.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5zM9.5 8c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5S9.5 9.38 9.5 8zm6.5 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
        />
      </svg>
    </div>
    <div
      class="Launch-connector-578 connector"
    />
    <div
      class="MuiPaper-root MuiPaper-elevation1 MuiCard-root Launch-launchInfo-577 launchInfo MuiPaper-rounded"
    >
      <div
        class="MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content"
        >
          <span
            class="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock"
          >
            Test
          </span>
          <span
            class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
          >
            <span>
              Tue, 01 Jan 2019 00:00:00 GMT
            </span>
          </span>
        </div>
      </div>
      <div
        class="MuiCardContent-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          Details
        </p>
      </div>
      <div
        class="MuiCardActions-root MuiCardActions-spacing"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall"
          href="/launches/1"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label"
          >
            explore
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Launch when launch is in progress renders in progress 1`] = `
<DocumentFragment>
  <div
    class="Launch-launch-346 launch"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation1 LaunchStatus-status-349 LaunchStatus-inProgress-354 MuiPaper-rounded"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root LaunchStatus-statusIcon-350"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
    </div>
    <div
      class="Launch-connector-348 connector"
    />
    <div
      class="MuiPaper-root MuiPaper-elevation1 MuiCard-root Launch-launchInfo-347 launchInfo MuiPaper-rounded"
    >
      <div
        class="MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content"
        >
          <span
            class="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock"
          >
            Test
          </span>
          <span
            class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
          >
            <span>
              Tue, 01 Jan 2019 00:00:00 GMT
            </span>
          </span>
        </div>
      </div>
      <div
        class="MuiCardContent-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom"
        >
          Details
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
        >
          ID: id1
        </p>
      </div>
      <div
        class="MuiCardActions-root MuiCardActions-spacing"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall"
          href="/launches/1"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label"
          >
            explore
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Launch when launch is tentative renders without actions 1`] = `
<DocumentFragment>
  <div
    class="Launch-launch-691 launch"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation1 LaunchStatus-status-694 LaunchStatus-success-697 MuiPaper-rounded"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root LaunchStatus-statusIcon-695"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM8 17.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5zM9.5 8c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5S9.5 9.38 9.5 8zm6.5 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
        />
      </svg>
    </div>
    <div
      class="Launch-connector-693 connector"
    />
    <div
      class="MuiPaper-root MuiPaper-elevation1 MuiCard-root Launch-launchInfo-692 launchInfo MuiPaper-rounded"
    >
      <div
        class="MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content"
        >
          <span
            class="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock"
          >
            Test
          </span>
          <span
            class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
          >
            <span>
              Tue, 01 Jan 2019
            </span>
          </span>
        </div>
      </div>
      <div
        class="MuiCardContent-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom"
        >
          Details
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
        >
          ID: id1
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
